--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,10 @@
 @import '../fonts/fonts.css';
 
+@import '../../components/page/page.css';
+@import '../../components/header/header.css';
+@import '../../components/main/main.css';
+@import '../../components/footer/footer.css';
+
 :root {
     --white: #ffffff;
     --black: #212429;
@@ -20,5 +25,5 @@
 }
 
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Inter', sans-serif;
 }
