--- a/components/header/header.css
+++ b/components/header/header.css
@@ -16,10 +16,7 @@
     padding-top:40px;
     padding-bottom:40px;
     text-align:left;
-}
-
-.header__menu{
-    padding-top:24px;
+    margin:0;
 }
 
 .header__logo-img{
