--- a/03-lection1/02-accordion_2/accordion.css
+++ b/03-lection1/02-accordion_2/accordion.css
@@ -1,10 +1,14 @@
 /* Стилизация аккордеона */
-summary {
+.accordion{
+    width:730px;
+    margin:0 auto;
+}
+.accordion__title {
     list-style: none;
     color:var(--black);
   }
 
-  .accordion__item{
+.accordion__item{
     border-radius: 8px;
     border:1px solid var(--grey-3);
     padding:24px 32px;
@@ -12,10 +16,8 @@ summary {
     font-size:16px;
     line-height:24px;
     font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    width:100%;
-    max-width:730px;
-    margin:8px auto;
+    font-weight: 400; 
+    margin-bottom:8px;
 }
 
 .accordion__item:last-child {
@@ -25,4 +27,6 @@ summary {
 .accordion__text{
     color:var(--grey-4);
     padding-top:16px;
+    padding-bottom:8px;
+    margin:0;
 }
