--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,8 +2,10 @@
 
 @import '../../components/page/page.css';
 @import '../../components/header/header.css';
-@import '../../components/main/main.css';
+@import '../../components/preview/preview.css';
 @import '../../components/footer/footer.css';
+@import '../../components/container/container.css';
+@import '../../components/card/card.css';
 
 :root {
     --white: #ffffff;
@@ -26,4 +28,9 @@
 
 * {
     font-family: 'Inter', sans-serif;
+   
+}
+
+body{
+    margin:0;
 }
