--- a/components/header/header.css
+++ b/components/header/header.css
@@ -2,13 +2,6 @@
     background-color: #FFFFFF;  
 }
 
-.header__content{
-    padding-top:24px;
-    max-width:1110px;
-    width:100%;
-    margin:0 auto;
-}
-
 .header__title{
     font-size:50px;
     line-height:64px;
@@ -17,6 +10,10 @@
     padding-bottom:40px;
     text-align:left;
     margin:0;
+}
+
+.header__logo{
+    padding-top:24px;
 }
 
 .header__logo-img{
