--- a/05-lection3/02-modal/modal.css
+++ b/05-lection3/02-modal/modal.css
@@ -1,29 +1,13 @@
-.wrap{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    height:100vh;
-    position:relative;
-}
-
-.button{
-    min-width:189px;
-    height:48px;
-    border-radius: 8px;
-    color:var(--white);
-    padding:15px 15px 14px;
-    text-align: center;
-    font-size:16px;
-    line-height:19px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    cursor:pointer;
-    background-color: #4263EB;
-    border:1px solid #4263EB;    
-}
+@import '../../03-lection1/01-button/button.css';
 
 .modal{
     display: none;
+    position:fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(196, 196, 196, 0.5);
 }
 
 .modal__block{
@@ -31,21 +15,13 @@
     border-radius:8px;
     padding:30px 40px;
     text-align:left;
-    width:428px;
+    max-width:428px;
     position:absolute;
     top:50%;
     left:50%;
     transform: translate(-50%, -50%);
 }
 
-.modal__wrap{
-    position:fixed;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
-    background-color: #C4C4C4;	
-}
 
 .modal__title{
     font-size:20px;
