add mobie for main page and page component

--- a/components/card/card.css
+++ b/components/card/card.css
@@ -9,7 +9,7 @@
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    gap:30px;   
+    gap:30px;  
 }
 
 .card{
@@ -20,6 +20,18 @@
     box-shadow: 0px 2px 4px rgba(33, 36, 41, 0.05);  
 }
 
-.preview__card{
+
+@media screen and (max-width: 576px) {
+    .preview{
+        padding-top:23px;
+        padding-bottom:23px;
+    }
     
+    .card{
+        width:164px;
+        height:177px;
+    }
+    .preview__cards{
+        gap:16px;  
+    }
 }
