--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -22,5 +22,30 @@
     font-size:16px;
     line-height:24px;
     font-weight:400;
-    padding-bottom:100px;
+    padding:0 16px 100px 16px;
+}
+
+.footer__text{
+    grid-area:footer;
+    color:#ACB5BD;
+    font-size:12px;
+    line-height:18px;
+    letter-spacing: 0.04;
+    font-weight: 500;
+    margin:56px;
+    text-align:center;
+    text-transform: uppercase;
+}
+
+@media screen and (max-width: 576px) {
+    .footer__title{
+        font-size:28px;
+        line-height:38px;
+        padding-top:40px;
+        padding-bottom:20px;
+    }
+    .footer__description{
+        font-size:12px;
+        line-height:18px;
+    }
 }
