--- a/components/menu/menu.css
+++ b/components/menu/menu.css
@@ -1,3 +1,33 @@
-.menu{
-    padding-right:56px;
+.menu__wrap{
+    padding-left:0;
+    margin:0;
+}
+
+.menu__title{
+    font-size:20px;
+    line-height:26px;
+    color:#000000;
+    font-weight: 400;
+    list-style-type:none;
+}
+
+.menu__subtitle{
+    font-size:14px;
+    line-height:22px;
+    color:#212429;
+    font-weight: 400;
+    padding-bottom:4px;
+    list-style-type:none;
+}
+
+.menu__block{
+    padding-top:16px;
+    padding-bottom:28px;
+    padding-left:0;
+}
+
+@media screen and (max-width: 992px) {
+    .menu{
+        display:none;
+    }
 }
