--- a/components/preview/preview.css
+++ b/components/preview/preview.css
@@ -1,7 +1,14 @@
-.main{
+.preview{
     background-color: #F9FAFC;
-    height:1036px;
     border-top:1px solid #DDE2E5;
     border-bottom:1px solid #DDE2E5;  
-    width:100%;
+    padding-top:53px;
+    padding-bottom:94px;
+}
+
+@media screen and (max-width: 576px) {
+    .preview{
+        padding-top:23px;
+        padding-bottom:23px;
+    }
 }
