--- a/05-lection3/02-modal/modal.css
+++ b/05-lection3/02-modal/modal.css
@@ -40,4 +40,11 @@
     position:absolute;
     top: 12px;
     right: 12px;
+    width:16px;
+    height:16px;
+}
+
+.icon__close{
+    width:16px;
+    height:16px;
 }
