--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,7 @@
 @import '../../components/footer/footer.css';
 @import '../../components/container/container.css';
 @import '../../components/card/card.css';
+@import '../../components/tabs/tabs.css';
 
 :root {
     --white: #ffffff;
