--- a/07-lection5/04-input/input.css
+++ b/07-lection5/04-input/input.css
@@ -1,4 +1,4 @@
-.label__text{
+.input__label{
     font-size: 12px;
     line-height: 18px;
     color:#ACB5BD;
@@ -17,6 +17,7 @@
     outline: none;
     font-size: 20px;
     line-height:26px;   
+   
 }
 
 .input__block:focus{
@@ -29,22 +30,22 @@
 }
 
 .input_success, .input_invalid{
-    position: relative;
     display:inline-block;
 }
 
-.icon__success, .icon__invalid{
+.input__wrapper{
+    position: relative;
+}
+
+.input__icon_success, .input__icon_invalid{
     display:none;
     position: absolute;
-    bottom:16px;
+    top:16px;
     right:16px;
 }
 
-.input_invalid .icon__invalid{
-    display:block;
-}
-
-.input_success .icon__success{
+.input_invalid .input__icon_invalid, 
+.input_success .input__icon_success{
     display:block;
 }
 
