--- a/components/tabs/tabs.css
+++ b/components/tabs/tabs.css
@@ -1,4 +1,4 @@
-.radio__tabs{
+.tabs__input{
     position:absolute;
     clip: rect(0, 0, 0, 0);
 }
@@ -9,7 +9,7 @@
     gap:40px;
 }
 
-.tabs__title{
+.tabs__label{
     font-size: 16px;
     line-height: 24px;
     color:#ACB5BD;
@@ -17,10 +17,21 @@
     padding-bottom:8px;
 }
 
-#all-tab:checked ~ .tabs__scroller #title_all,
-#elements-tab:checked ~ .tabs__scroller #title_elements,
-#containers-tab:checked ~ .tabs__scroller #title_containers,
-#templates-tab:checked ~ .tabs__scroller #title_templates{
+.tabs__input_all:checked ~ .tabs__scroller .tabs__label_all,
+.tabs__input_elements:checked ~ .tabs__scroller .tabs__label_elements,
+.tabs__input_containers:checked ~ .tabs__scroller .tabs__label_containers,
+.tabs__input_templates:checked ~ .tabs__scroller .tabs__label_templates{
     color:#212429;
     border-bottom:5px solid #212429;
+}
+
+.tabs__content{
+    display:none;
+}
+
+.tabs__input_all:checked ~ .tabs__content_all,
+.tabs__input_elements:checked ~ .tabs__content_elements,
+.tabs__input_containers:checked ~ .tabs__content_containers,
+.tabs__input_templates:checked ~ .tabs__content_templates{
+    display:block;
 }
